crystal-facet-uml (1.18.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]

  * the search view allows to search for object ids
  * bugfix: when changing the type of an object, lastest changes to name
    or description are not lost

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 19 Jan 2020 20:30:00 +0100

crystal-facet-uml (1.17.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * cmake build config is less platform dependent
  * nav-tree: dragging diagrams shows a tree-depth aware insert line
  * while dragging, grid lines are displayed
  * the description text-view has scrollbars
  * in nav view, a click into the current diagram zooms to edit mode
  * in create view, an icon next to the mouse cursor shows options
  * fix: type dropdown box does not change DB automatically if unknown type id
  * the type drop down box shows icons to faster find the right type
  * an icon grid allows one to change types quickly

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 05 Jan 2020 20:30:00 +0100

crystal-facet-uml (1.16.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * relationships may overlap if same type and same direction
  * title and filename of exported docbook and xhtml equals database file name

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 08 Dec 2019 11:30:00 +0100

crystal-facet-uml (1.16.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * rpm package build scripts beautified, doc installation excluded from cmake

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 26 Nov 2019 19:30:00 +0100

crystal-facet-uml (1.16.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Diagram exports can be triggered from command line
  * Cut + paste of relationships is possible
  * Json format in clipboard slightly modified
    (set renamed to data, order required, relationship src/dst names added)
  * The default classifier size is calculated based on the grid-distances
  * Fix: Scenario based diagrams showing multiple identical classifier