@@ -3,8 +3,9 @@ crystal-facet-uml (1.18.0) UNRELEASED; urgency=medium
   [ Andreas Warnke ]
 
   * the search view allows to search for object ids
-  * bugfix: when changing the type of an object, lastest changes to name
+  * bugfix: when changing type of an object, lastest changes to name
     or description are not lost
+  * pressing enter in name or stereotype field causes an immediate save action
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 19 Jan 2020 20:30:00 +0100
 
